# thesis-julian

./: .gitignore  README.markdown  README.md  docker-compose.yml
.github/workflows/: cd.yml  docker-ci.yml
gateway/: main_gateway.py
mosquitto/config/: mosquitto.conf
mosquitto/data/: mosquitto.db
nodered/: .config.nodes.json  .config.nodes.json.backup  .config.runtime.json  .config.runtime.json.backup  .config.users.json  .config.users.json.backup  .flows.json.backup  flows.json  flows_cred.json  package-lock.json  package.json
robocar/: CMakeLists.txt  Kconfig.projbuild  encoder.c  encoder.h  ir_sensors.c  ir_sensors.h  main.c  motor_driver.c  motor_driver.h  pid.c  pid.h  wifi_udp.c  wifi_udp.h
